--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,11 @@ spring:
         logic-delete-field: deleted  # 逻辑删除字段名（可选）
         logic-delete-value: 1  # 逻辑已删除值（可选）
         logic-not-delete-value: 0  # 逻辑未删除值（可选）
+
+logging:
+  level:
+    root: info
+    org.dante.vue3.mapper: debug
+#    org.apache.ibatis: debug
+#    com.baomidou.mybatisplus: debug
+#    com.github.yulichang: debug
