--- a/front-naiveui-ts/package.json
+++ b/front-naiveui-ts/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.13.0",
+    "alova": "^3.3.3",
     "naive-ui": "^2.41.1",
     "vfonts": "^0.0.3",
     "vue": "^3.5.13",
